force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The day that the project must start</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>