force-app/main/default/objects/Project__c/fields/Total_Covered_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Covered_Hours__c</fullName>
    <label>Total Covered Hours</label>
    <summarizedField>Required_Role__c.TotalCoverage__c</summarizedField>
    <summaryForeignKey>Required_Role__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>