force-app/main/default/objects/Project__c/fields/Total_Hours_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Sold__c</fullName>
    <description>Sold hours to new clients</description>
    <label>Total Hours Sold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>