force-app/main/default/objects/Project__c/validationRules/Restrict_Change_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Change_Status</fullName>
    <active>true</active>
    <description>Hours Coverage needs to be fully completed</description>
    <errorConditionFormula>IF( NOT(ISPICKVAL(Status__c, &quot;Pre Kick Off&quot;)) &amp;&amp; (Total_Covered_Hours__c &lt;  Total_Hours_Sold__c) , True, False)</errorConditionFormula>
    <errorMessage>Make sure to allocate the resources to fill the Total Hours Sold</errorMessage>
</ValidationRule>