force-app/main/default/objects/Project__c/listViews/Project.listView-meta.xml
<ListView>
    <fullName>Project</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Project</label>
</ListView>