force-app/main/default/objects/Project__c/listViews/Projects.listView-meta.xml
<ListView>
    <fullName>Projects</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Squad_Lead__c</columns>
    <columns>Total_Hours_Sold__c</columns>
    <columns>Total_Covered_Hours__c</columns>
    <filterScope>Mine</filterScope>
    <label>Projects</label>
</ListView>